--- a/style.css
+++ b/style.css
@@ -6151,6 +6151,7 @@ background:none;
 }
  .ttr_menu_logo 
 {
+ max-height: 80px;
 background-repeat: no-repeat;
 transform:rotate(0deg);
 -moz-transform:rotate(0deg);
