--- a/style.css
+++ b/style.css
@@ -6744,7 +6744,7 @@ width:auto;
 }
  #Slide0
 {
-background:url(HomeDesktopSlide0.jfif);
+background:url(trailer1.jpg);
 background-color:#3498DB;
 background-repeat:no-repeat;
 background-size:cover;
@@ -6753,7 +6753,7 @@ background-clip:padding-box;
 }
  #Slide1
 {
-background:url(HomeDesktopSlide1.jfif);
+background:url(trailer2.jpg);
 background-color:#3498DB;
 background-repeat:no-repeat;
 background-size:cover;
